--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "cors": "^2.8.5",
     "express": "^4.14.0",
     "express-session": "^1.16.1",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "nodemon": "^2.0.3"
   }
 }
